robballen75-Salesforce/4-7-15/src/objects/MS_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Area_of_Effort__c</fullName>
        <label>Area of Effort</label>
        <picklist>
            <picklistValues>
                <fullName>Scope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery/Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build/Configure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation &amp; Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Train</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troubleshoot/Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERNAL:  Attend New Product Release Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERNAL:  Attend Word Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERNAL:  Attend New Hire Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERNAL:  Develop or Deliver Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERNAL:  Attend &quot;other&quot; training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERNAL:  Shadowing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assignment_Due_Date__c</fullName>
        <label>Assignment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assignment_Notes__c</fullName>
        <label>Assignment Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to mark assignment as completed - will filter out of open assignment reports.</inlineHelpText>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_Assigned__c</fullName>
        <inlineHelpText>Total hours allocated to this assignment.</inlineHelpText>
        <label>Hours Assigned</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Logged_f__c</fullName>
        <inlineHelpText>Roll-up of Time Entry Hours for this Assignment.</inlineHelpText>
        <label>Hours Logged (f)</label>
        <summarizedField>MS_Time_Entry__c.Time_Entry_Hours__c</summarizedField>
        <summaryForeignKey>MS_Time_Entry__c.Assignment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hours_Remaining_on_Assignment__c</fullName>
        <formula>Hours_Assigned__c - Hours_Logged_f__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hours assigned minus hours logged.</inlineHelpText>
        <label>Hours Remaining on Assignment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Assignment_Owner__c</fullName>
        <label>Legacy Assignment Owner</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Client_ID__c</fullName>
        <label>Legacy Client ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Project_Time_Tracking_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Project Time Tracking ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this assignment represents a milestone on the project.  This may be used to report on milestones.</inlineHelpText>
        <label>Milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Billable_Assignment__c</fullName>
        <description>Sum of Non Billable Hourse for this assignment</description>
        <label>Non-Billable (Assignment)</label>
        <summarizedField>MS_Time_Entry__c.TE_Hours_NON_BILLABLE_Internal__c</summarizedField>
        <summaryForeignKey>MS_Time_Entry__c.Assignment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Not_Chargeable_Assignment__c</fullName>
        <description>Sum of Non-Chargeable for this Assignment</description>
        <label>Not Chargeable (Assignment)</label>
        <summarizedField>MS_Time_Entry__c.TE_Billable_Not_Chargeable__c</summarizedField>
        <summaryForeignKey>MS_Time_Entry__c.Assignment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_ID_ref__c</fullName>
        <description>used for reference to project ID when needed on assignment custom links</description>
        <formula>Project__r.Id</formula>
        <label>Project ID (ref)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MS_Project__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Assignment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>